--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title data-en="Healing Yoga" data-jp="カルム ヨガ と 瞑想">Healing Yoga </title>
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17634403570"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'AW-17634403570');
+  </script>
 </head>
 <body>
 
@@ -272,3 +282,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
