--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <span
             id="siteName"
             data-en="Powell Healing Yoga"
-            data-jp="カルム ヨガ"
+            data-jp="パウエルヒーリングヨガ"
             >Powell Healing Yoga</span
           >
         </a>
@@ -55,8 +55,8 @@
         <!-- Navigation -->
         <nav class="nav" id="navMenu">
           <a href="#home" data-en="home" data-jp="ホーム">Home</a>
-          <a href="#about" data-en="about" data-jp="会社情報">About</a>
-          <a href="#services" data-en="services" data-jp="サービス">Services</a>
+          <a href="#about" data-en="about" data-jp="私たちについて">About</a>
+          <a href="#services" data-en="services" data-jp="クラス">Services</a>
           <a href="#schedule" data-en="schedule" data-jp="スケジュール"
             >Schedule</a
           >
@@ -79,7 +79,7 @@
               <h1>Find Your Inner Calm</h1>
               <p>
                 Yoga and meditation sessions in New York and Tokyo with
-                certified instructor Melissa Jane.
+                certified instructor Selena Marie Powell.
               </p>
               <a class="btn" href="#contact">Join a Class</a>
             </div>
@@ -99,15 +99,15 @@
                 practices.
               </p>
               <p>
-                With classes available in both New York and Tokyo, Melissa Jane
-                provides sessions that blend traditional yoga with modern
+                With classes available in both New York and Tokyo, Selena Marie
+                Powell provides sessions that blend traditional yoga with modern
                 techniques for a healthy body and mind.
               </p>
             </div>
             <div class="about-details">
               <div class="detail-card">
                 <h4>Locations</h4>
-                <p>New York, United Kingdom<br />Tokyo, Japan</p>
+                <p>New York, USA<br />Tokyo, Japan</p>
               </div>
             </div>
           </div>
@@ -283,7 +283,8 @@
             <div class="reason-card">
               <h3 data-key="reason1Title">Experienced Instructor</h3>
               <p data-key="reason1Text">
-                Melissa Jane brings years of yoga and meditation expertise.
+                Selena Marie Powell brings years of yoga and meditation
+                expertise.
               </p>
             </div>
             <div class="reason-card">
@@ -326,11 +327,9 @@
             <div class="contact-info">
               <h3>Get in Touch</h3>
               <p>Reach out to join a class or schedule a private session.</p>
-              <p>Email: info@calmyoga.com</p>
-              <p>
-                Phone: +44 1234 567890 (New York) | +81 90 1234 5678 (Tokyo)
-              </p>
-              <p>Locations: New York, UK & Tokyo, Japan</p>
+              <p>Email: info@powellhealingyoga.com</p>
+              <p>Phone: +1 202 982 2945</p>
+              <p>Locations: New York, USA & Tokyo, Japan</p>
             </div>
             <form id="contactForm" class="contact-form">
               <input type="text" id="name" placeholder="Name" required />
@@ -352,14 +351,16 @@
             alt="Logo"
             width="50"
           />
-          <span data-en="Calm Yoga and Meditation" data-jp="カルム ヨガ と 瞑想"
-            >Calm Yoga</span
+          <span
+            data-en="Calm Yoga and Meditation"
+            data-jp="パウエルヒーリングヨガ"
+            >Powell Healing Yoga</span
           >
         </div>
         <div class="footer-links">
           <a href="#home" data-en="home" data-jp="ホーム">Home</a>
-          <a href="#about" data-en="about" data-jp="会社情報">About</a>
-          <a href="#services" data-en="services" data-jp="サービス">Services</a>
+          <a href="#about" data-en="about" data-jp="私たちについて">About</a>
+          <a href="#services" data-en="services" data-jp="クラス">Services</a>
           <a href="#contact" data-en="contact" data-jp="お問い合わせ"
             >Contact</a
           >
@@ -383,7 +384,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>© 2025 Calm Yoga and Meditation. All rights reserved.</p>
+        <p>© 2025 Powell Healing Yoga. All rights reserved.</p>
       </div>
     </footer>
 
